--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Atul Kumar Singh Profile Page</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Atul Kumar Singh Loves Neha Maharaj</h1>
+<p>Husband of Neha Maharaj</p>
 </body>
 </html>
